static/style.css
a:link { text-decoration: none;}

body {
    margin: 0;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.bg-img {
    background-image: url(images/SIDE2.jpg);

    min-height: 550px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

    position: relative;
}

.container {
    position: absolute;
    margin: 0px;
    width: auto;
}

.leftnav {
    overflow: hidden;
    background-color: #ddd;
    margin-top: 10px;
    border-radius: 10px;
    margin-left: 10px;
}

.leftnav a {
    float: left;
    color: blue;
    text-align: left;
    padding: 10px 12px;
    text-decoration: none;
    font-weight: 700;
    font-size: 17px;
}

.topnav a:hover {
    background-color: blue;
    color: white;
}

.logo {
    display: block;
    padding-top: 5px;
    margin-left: auto;
    margin-right: auto;
    width: 30%;
}

.logo img {
    height: auto;
    width: 100%;
    border-radius: 14px;
}

.ctamaster {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 90px;
    color: white;
    margin-left: 50px;
    margin-right: 50px;
}

.ctamaster img {
    max-width: 100%;
}

.image2 {
    flex-basis: 50%;
    padding-right: 20px;
}

.CTA h1 {
    font-size: 60px;
    margin-bottom: 20px;
    line-height: .9;
    margin-top: 0px; 
}

.CTA h2 {
    margin-top: 20px;
    margin-bottom: 30px;
    font-size: 15px;
    font-weight: 200;
}
.button {
    background-color:rgb(8, 90, 221);
    color: #ddd;
    height: 45px;
    border-radius: 50px;
    width: 120px;
    font-size: 17px;
    border-color: rgb(8, 90, 221);
    font-weight: bold;
}

.row {
    display: flex;
    flex-wrap: wrap;
    padding: 4px 4px;
    background-color: black;
    position: relative;
}

.column {
    flex: 32.3%;
    max-width: 32.3%;
    padding: 4px 4px;
    position: relative;
}

.column img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

@media screen and (max-width:800px) {
    .column {
        flex:50%;
        max-width:50%;
    }
}

@media screen and (max-width: 600px) {
    .column {
      flex: 100%;
      max-width: 100%;
    }
  }

.bottom {
    display: block;
    align-items: center;
    justify-content: center;
    background-color: black;
    background-image: url(images/beach.jpg);
    min-height: 900px;
    background-position: center;
    background-size: cover;
    color: white;
    background-repeat: no-repeat;
    position: absolute;
    width: 100%;
}

.bottom h1 {
    display: block;
    padding-top: 330px;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
    text-align: center;
}

.button1 {
    background-color: rgb(8, 90, 221);
    color: #ddd;
    height: 45px;
    border-radius: 50px;
    width: 120px;
    font-size: 17px;
    border-color: rgb(8, 90, 221);
    font-weight: bold;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-decoration: none;
}


.bg-img2 {
    background-image: url(images/flag.jpg);

    min-height: 600px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;


    position: relative;
}

.removable {
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 90px;
    color: white;
    margin-left: 50px;
    margin-right: 50px;
}

.yt {
    padding-left: 20px;
    border: none;
}

.carplay {
    background-image: url(images/boat.jpg);

    min-height: 800px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;


    position: absolute;
    width: 100%;

    color: white;
}

.carplay h1 {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
}

.carplay p {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
}

.cp {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.bg-img3 {
    background-color: white;
    background-image: url(images/Slide6.JPG);

    min-height: 2000px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;


    position: relative;
}

.reviews {
    margin-top: 100px;
}

.reviews img {
    margin-top: -10px;
    padding-top: 0;
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.button3 {
    background-color: rgb(8, 90, 221);
    color: #ddd;
    height: 45px;
    border-radius: 50px;
    width: 120px;
    font-size: 17px;
    border: none;
    font-weight: bold;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-decoration: none;
    margin-top: 20px;
   
}

